# chisel

./: AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  clippy.toml  dagger.json  deny.toml
.dagger/src/: index.ts
.github/workflows/: ci.yaml
crates/chisel-bin/: Cargo.toml
crates/chisel-core/: Cargo.toml
crates/chisel-core/src/: lib.rs
crates/chisel-providers/: Cargo.toml
crates/chisel-providers/src/: lib.rs
crates/chisel-tui/: Cargo.toml
crates/chisel-tui/src/: lib.rs
