[package]
name = "chisel-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chisel-core = { path = "../chisel-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
