[package]
name = "chisel-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chisel-core = { path = "../chisel-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
