[package]
name = "chisel-tui"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow.workspace = true
chisel-core = { path = "../chisel-core" }
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
tokio.workspace = true

[lints]
workspace = true
